--- a/Python/Task/Python 8 projects/Python Final Project/templates/enterAmount.html
+++ b/Python/Task/Python 8 projects/Python Final Project/templates/enterAmount.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{url_for('static', filename='css/atm.css')}}" type="text/css">
-    <title>Atm Choice</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/AccTypeCheck.css')}}" type="text/css">
+    <title>Enter Ammount</title>
 </head>
 <body>
 
@@ -49,36 +49,30 @@
 
         <div class="container-fluid" id="atm_div">
             <table id="atm_table">
-                <form action="first_select" method="POST">
+                <form action="enterAmount" method="POST">
                 <tr >
                     <td id="bt_choice">
-                        <!-- <button id="first_choice"><label for="PinChange">Pin Change</label></button> -->
-                        <label for="PinChange" class="labelButton">Pin Change</label>
                     </td>
                     <td rowspan="2" id="atm_display">
-                        <h1>Click on Your Choice</h1>
+                        <h1>Enter Your Amount</h1>
                         <div class="container-fluid" id="display_div">
                             <div class="radioCH">
                   
-                                <input type="radio" value="PinChange" name="main_choice" id="PinChange" checked>
-                                <input type="radio" value="MiniStatement" name="main_choice" id="MiniStatement">
-                                <input type="radio" value="Withdrawl" name="main_choice" id="Withdrawl">
-                                <input type="radio" value="BalanceEnquiry" name="main_choice" id="BalanceEnquiry">
-                                <input type="radio" value="GenratePin" name="main_choice" id="GenratePin">
+                                <input type="number" value="" name="ent_amount" id="amt" >
                             </div>
                         </div>
                     </td>
                     <td id="bt_choice">
-                        <label for="GenratePin" class="labelButton">Genrate Pin</label>
+                     
                     </td>
                 </tr>
                 <tr id="bt_diaplay">
                     <td id="bt_choice">
-                        <label for="MiniStatement" class="labelButton">MiniStatement</label>
+                        
                     </td>
                         
                     <td id="bt_choice">
-                        <label for="Withdrawl" class="labelButton">Withdrawl</label>
+                        
                     </td>
                 </tr>
                 <tr>
@@ -90,7 +84,7 @@
                         <button class="btn-primary" value="submit" type="submit" id="prim_submit" type="submit">Submit</button>
                     </td>
                     <td id="bt_choice">
-                        <label for="BalanceEnquiry" class="labelButton">Balance Enquiry</label>
+                       
                     </td>
                 </tr>
                 </form>
