--- a/Python/Task/Python 8 projects/Python Final Project/templates/usermoneytff.html
+++ b/Python/Task/Python 8 projects/Python Final Project/templates/usermoneytff.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='css/usermoneytff.css')}}" type="text/css">
-    <title>Deposite Money</title>
+    <title>Money Transfer</title>
 </head>
 <body>
 
@@ -51,7 +51,7 @@
             
             <!-- --------------------------------User Login Form --------- -->
                     <div class="container-fluid" id="div_deposit">
-                        <h1>Deposite Money</h1>
+                        <h1>Money Transfer</h1>
 
                         <div class="card">
                           <form action="MoneyTransfer_form" id="depo_form" method="POST">
