--- a/Python/Task/Python 8 projects/Python Final Project/templates/showuser.html
+++ b/Python/Task/Python 8 projects/Python Final Project/templates/showuser.html
@@ -33,6 +33,9 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active text-light" aria-current="page" href="deposite">Deposite</a>
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link active text-light" aria-current="page" href="atmPage">ATM Card</a>
                   </li>   
                   <li class="nav-item">
                     <a class="nav-link active text-light" aria-current="page" href="logout">Log Out</a>
