--- a/Python/Task/Python 8 projects/Python Final Project/templates/usermoneytff.html
+++ b/Python/Task/Python 8 projects/Python Final Project/templates/usermoneytff.html
@@ -35,6 +35,10 @@
                     <a class="nav-link active text-light" aria-current="page" href="deposite">Deposite</a>
                   </li> 
                   <li class="nav-item">
+                    <a class="nav-link active text-light" aria-current="page" href="atmPage">ATM Card</a>
+                  </li>   
+                  <li cla
+                  <li class="nav-item">
                     <a class="nav-link active text-light" aria-current="page" href="logout">Log-Out</a>
                   </li>
               
