--- a/Python/Task/Python 8 projects/Python Final Project/templates/usermoneytff.html
+++ b/Python/Task/Python 8 projects/Python Final Project/templates/usermoneytff.html
@@ -93,7 +93,7 @@
                               </tr>
                               <tr>
                                 <td><label for="dop_passw" id="pass">Profile Password : </label></td>
-                                <td><input type="text" name="user_passw" id="dop_passw" required></td>
+                                <td><input type="password" name="user_passw" id="dop_passw" required></td>
                               </tr>
                               <tr>
                                
