--- a/Python/Task/Python 8 projects/Python Final Project/templates/deposite.html
+++ b/Python/Task/Python 8 projects/Python Final Project/templates/deposite.html
@@ -87,7 +87,7 @@
                               </tr>
                               <tr>
                                 <td><label for="dop_passw" id="pass">Profile Password : </label></td>
-                                <td><input type="text" name="deposite_passw" id="dop_passw" required></td>
+                                <td><input type="password" name="deposite_passw" id="dop_passw" required></td>
                               </tr>
                               <tr>
                                
