--- a/Django/task/firstProject/adminview/templates/adminRegister.html
+++ b/Django/task/firstProject/adminview/templates/adminRegister.html
@@ -17,25 +17,25 @@
         <div class="row">
             <h1 style="width: 59%;">Welcome to User Register Form</h1>
             <div class="col-md-5" id="fromDiv">
-                <form method="post" action="addUser">
+                <form method="post">
                     {% csrf_token%}
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">ID</label>
-                        <input type="number" class="form-control" name="user_id" id="userId" aria-describedby="emailHelp">
+                        <input type="number" class="form-control" name="admin_id" id="userId" aria-describedby="emailHelp">
                       </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Username</label>
-                        <input type="text" class="form-control" name="user_name" id="username" aria-describedby="emailHelp">
+                        <input type="text" class="form-control" name="admin_name" id="username" aria-describedby="emailHelp">
                       </div>
 
                     <div class="mb-3">
                       <label for="exampleInputEmail1" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" name="user_email" aria-describedby="emailHelp">
+                      <input type="email" class="form-control" id="exampleInputEmail1" name="admin_email" aria-describedby="emailHelp">
 
                     </div>
                     <div class="mb-3">
                       <label for="exampleInputPassword1" class="form-label">Contact</label>
-                      <input type="number" class="form-control" name="user_contact" id="exampleInputContact">
+                      <input type="number" class="form-control" name="admin_contact" id="exampleInputContact">
                     </div>
                     <div class="mb-3 form-check">
                       <input type="checkbox" class="form-check-input" id="exampleCheck1">
