--- a/Django/task/firstProject/developerview/templates/navbar.html
+++ b/Django/task/firstProject/developerview/templates/navbar.html
@@ -19,7 +19,7 @@
 
       }
       .navbar-nav{
-        width: 60%;
+        width: 70%;
         font-size: 20px;
 
       }
@@ -57,6 +57,9 @@
               </li>
               <li class="nav-item" >
                 <a class="nav-link" href="adminRegister" style="color: white;">Admin Register</a>
+              </li>
+              <li class="nav-item" >
+                <a class="nav-link" href="adminList" style="color: white;">Admin List</a>
               </li>
             </ul>
            
