--- a/Django/Leacture/12-06Project/mainproject/firstappp/templates/empForm.html
+++ b/Django/Leacture/12-06Project/mainproject/firstappp/templates/empForm.html
@@ -7,9 +7,22 @@
     <title>Employee Form</title>
 
     <style>
+        h1{
+            text-align: center;
+        }
+        form{
+            padding: 10px;
+        }
         table{
             margin: auto;
+            border: 2px solid black;
+            padding: 20px;
+
         }
+        table tr td{
+            padding: 10px;
+        }
+
     </style>
 </head>
 
@@ -18,7 +31,7 @@
 
     <form method="post">
         {% csrf_token %}
-        <table>
+        <table cellspacing="2px">
             <tr>
                 <td>Name</td>
                 <td><input type="text" name="emp_name"></td>
