--- a/Django/Leacture/12-06Project/mainproject/firstappp/templates/home.html
+++ b/Django/Leacture/12-06Project/mainproject/firstappp/templates/home.html
@@ -10,5 +10,7 @@
     <h1>Welcome to ORM</h1>
     <h3><a href="insert">Insert Data</a></h3><br>
     <h3><a href="EmpData">Employee Form</a></h3>
+    <h3><a href="EmpData2">Employee Form Automatic</a></h3>
+    <h3><a href="userList"> Employee List</a></h3>
 </body>
 </html>
